--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <![endif]-->
   </head>
   <body>
+    <h1>The Lab of Crazy Interactions</h1>
     <!--[if IE]>
       <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p></div>
     <![endif]-->
